Update chart app versions to match released versions:
Helm chart app version now matches each repos released
version. Fix checksum file formatting. Added runtime
look ups for DNS resolvers in nginx config. This is
needed so that nginx does DNS look up on every request,
so that if/when pods move and change IPs the routing in
nginx still works. Without this, on start, nginx would
cache the resolve DNS name.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: c6fcf52a9428c60d21d2a6a68820a285f0cec073

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -17,12 +17,12 @@ stack:
     downloads:
       - url: https://github.com/tinkerbell/hook/releases/download/v0.7.0/hook_x86_64.tar.gz
         sha512sum:
-          kernel: 7c35042d35c003ae1f424e503ad6edf21854bc70b24b37006e810c3c8a92543420eed129c14e364769b0f32c27bdf4c61299fce8f8156af7477cac6a43931a20 vmlinuz-x86_64
-          initramfs: be7c3d57e2d73bfa4e41a2b5740c722b1c83722e4388b3cff9017192fce43ede360221e3095c800e511d7b4bce6065f2906883421409dd6d983412418a8d903e initramfs-x86_64
+          kernel: "7c35042d35c003ae1f424e503ad6edf21854bc70b24b37006e810c3c8a92543420eed129c14e364769b0f32c27bdf4c61299fce8f8156af7477cac6a43931a20  vmlinuz-x86_64"
+          initramfs: "be7c3d57e2d73bfa4e41a2b5740c722b1c83722e4388b3cff9017192fce43ede360221e3095c800e511d7b4bce6065f2906883421409dd6d983412418a8d903e  initramfs-x86_64"
       - url: https://github.com/tinkerbell/hook/releases/download/v0.7.0/hook_aarch64.tar.gz
         sha512sum:
-          kernel: 2f1bdbf64380e281288f54c6ddd29221d8a007d29b40f405da0592ed32ef6e52695fc5071e05b2db3f075122943d62a2c266704d154a16ffb7b278c70538e7da vmlinuz-aarch64
-          initramfs: 5adc51798c8699f5f257599aabb999e2c2f65a07c9f8607c65510e57122b3e5c53196819e7ececdcda7b8fef47ba597ea7c4b53f2f4a92e236b20e355443eefe initramfs-aarch64
+          kernel: "2f1bdbf64380e281288f54c6ddd29221d8a007d29b40f405da0592ed32ef6e52695fc5071e05b2db3f075122943d62a2c266704d154a16ffb7b278c70538e7da  vmlinuz-aarch64"
+          initramfs: "5adc51798c8699f5f257599aabb999e2c2f65a07c9f8607c65510e57122b3e5c53196819e7ececdcda7b8fef47ba597ea7c4b53f2f4a92e236b20e355443eefe  initramfs-aarch64"
 
 kubevip:
   enabled: true
@@ -31,18 +31,15 @@ kubevip:
   imagePullPolicy: IfNotPresent
   roleName: kube-vip-role
   roleBindingName: kube-vip-rolebinding
-  interface: enp0s9
+  interface: cockpitbr
 
 tink:
   tink:
     controller:
-      image: quay.io/tinkerbell/tink-controller:latest
     server:
-      image: quay.io/tinkerbell/tink:latest
 
 boots:
   boots:
-    image: quay.io/tinkerbell/boots:latest
     env:
     - name: DATA_MODEL_VERSION
       value: "kubernetes"
@@ -67,19 +64,17 @@ boots:
     - name: BOOTS_LOG_LEVEL
       value: "debug"
     - name: BOOTS_EXTRA_KERNEL_ARGS
-      value: "tink_worker_image=quay.io/tinkerbell/tink-worker:latest"
-    - name: TRUSTED_PROXIES
-      value: 10.42.0.0/24
+      value: "tink_worker_image=quay.io/tinkerbell/tink-worker:sha-eeb2a454"
+    #- name: TRUSTED_PROXIES
+    #  value: 10.42.0.0/24
     hostNetwork: false
 
 
 hegel:
   hegel:
-    image: quay.io/tinkerbell/hegel:latest
     env:
     - name: TRUSTED_PROXIES
       value: 10.42.0.0/24
 
 rufio:
   rufio:
-    image: quay.io/tinkerbell/rufio:v0.1.0
