--- a/charts/tinkerbell/hegel/values.yaml
+++ b/charts/tinkerbell/hegel/values.yaml
@@ -4,7 +4,7 @@ hegel: # a top-level key like this enables importing of all sub-keys in parent c
   - name: TRUSTED_PROXIES
     value: 192.168.0.0/16
   name: hegel
-  image: quay.io/tinkerbell/hegel:latest
+  image: quay.io/tinkerbell/hegel:v0.7.0
   imagePullPolicy: IfNotPresent
   replicas: 1
   service:
