--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -1,92 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nginx-conf
-  namespace: {{ .Release.Namespace | quote }}
-data:
-  nginx.conf: |
-    worker_processes 1;
-    events {
-        worker_connections  1024;
-    }
-    user root;
-
-    http {
-      server {
-        listen 80;
-        location / {
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          resolver 10.43.0.10;
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
-
-          proxy_pass http://$boots_dns;
-        }
-      }
-
-      server {
-        listen {{ .Values.hegel.deployment.port }};
-        location / {
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          resolver 10.43.0.10;
-          set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
-
-          proxy_pass http://$hegel_dns:50061;
-        }
-      }
-
-      server {
-        listen {{ .Values.tink.server.deployment.port }} http2;
-        location / {
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          resolver 10.43.0.10;
-          set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
-
-          grpc_pass grpc://$tink_dns:42113;
-        }
-      }
-
-       server {
-        listen {{ .Values.stack.hook.port }};
-        location / {
-          root /usr/share/nginx/html;
-        }
-      }
-    }
-
-    stream {
-      log_format logger-json escape=json '{"source": "nginx", "time": $msec, "address": "$remote_addr", "status": $status, "upstream_addr": "$upstream_addr"}';
-
-      server {
-          listen 67 udp;
-          resolver 10.43.0.10; # needed in Kubernetes for dynamic DNS resolution
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
-          proxy_pass $boots_dns:67;
-          proxy_bind $remote_addr:$remote_port transparent;
-          proxy_responses 0;
-          access_log /dev/stdout logger-json;
-      }
-      server {
-          listen 69 udp;
-          resolver 10.43.0.10;
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
-          proxy_pass $boots_dns:69;
-          proxy_timeout 1s;
-          access_log /dev/stdout logger-json;
-      }
-      server {
-          listen 514 udp;
-          resolver 10.43.0.10;
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
-          proxy_pass $boots_dns:514;
-          proxy_bind $remote_addr:$remote_port transparent;
-          proxy_responses 0;
-          access_log /dev/stdout logger-json;
-      }
-    }
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -101,6 +12,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       labels:
         {{- with .Values.stack.selector }}
         {{- toYaml . | nindent 8 }}
@@ -109,6 +22,11 @@ spec:
       containers:
       - name: {{ .Values.stack.name }}
         image: {{ .Values.stack.image }}
+        command: ["/bin/bash", "-c"]
+        args:
+        - export POD_NAMESERVER=$(awk 'NR==2 {print $2}' /etc/resolv.conf);
+          envsubst '$POD_NAMESERVER' < /tmp/nginx.conf.template > /etc/nginx/nginx.conf;
+          nginx -g 'daemon off;'
         ports:
         {{- range .Values.boots.ports }}
         - containerPort: {{ .port}}
@@ -134,22 +52,25 @@ spec:
         volumeMounts:
         - mountPath: /usr/share/nginx/html
           name: hook-artifacts
-        - mountPath: /etc/nginx
+        - mountPath: /tmp
           readOnly: true
           name: nginx-conf
       {{- if .Values.stack.hook.enabled }}
       initContainers:
       - name: init-hook-download
         image: {{ .Values.stack.hook.image }}
-        command: ["/bin/sh", "-c"]
+        command: ["/bin/sh", "-xc"]
         args: # TODO(jacobweinstock): add checksum verification after download
         - rm -rf /usr/share/nginx/html/checksums.txt;
           touch /usr/share/nginx/html/checksums.txt;
           {{- range $index, $keys := .Values.stack.hook.downloads }}
-          echo -e "{{ $keys.sha512sum.kernel }}" >> /usr/share/nginx/html/checksums.txt;
-          echo -e "{{ $keys.sha512sum.initramfs }}" >> /usr/share/nginx/html/checksums.txt;
-          (cd /usr/share/nginx/html/; sha512sum -c checksums.txt && exit 0);
-          apt update; apt -y install wget;
+          echo "{{ $keys.sha512sum.kernel }}" >> /usr/share/nginx/html/checksums.txt;
+          echo "{{ $keys.sha512sum.initramfs }}" >> /usr/share/nginx/html/checksums.txt;
+          {{- end }}
+          cd /usr/share/nginx/html/;
+          sha512sum -c checksums.txt && exit 0;
+          {{- range $index, $keys := .Values.stack.hook.downloads }}
+          apk add wget;
           echo downloading HOOK...;
           wget -O /tmp/hook{{ $index }}.tar.gz {{ $keys.url }};
           tar -zxvf /tmp/hook{{ $index }}.tar.gz -C "/usr/share/nginx/html/";
@@ -169,4 +90,4 @@ spec:
           name: nginx-conf
           items:
             - key: nginx.conf
-              path: nginx.conf
+              path: nginx.conf.template
