Handle trusted proxies in Boots and hegel:
Trusted proxies needed for Boots and Hegel
are now handled dynamically at `helm install` time.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 9ba16c4c3873fcb6e6ae8f12d60bf5cd79bb3c02

--- a/charts/tinkerbell/boots/templates/deployment.yaml
+++ b/charts/tinkerbell/boots/templates/deployment.yaml
@@ -33,8 +33,10 @@ spec:
             - {{ . }}
           {{- end }}
           {{- end }}
-          {{- if .Values.boots.env }}
           env:
+            - name: TRUSTED_PROXIES
+              value: {{ .Values.boots.trustedProxies }}
+          {{- if .Values.boots.env }}
             {{- range $i, $env := .Values.boots.env }}
             - name: {{ $env.name | quote }}
               value: {{ $env.value | quote }}
