--- a/charts/tinkerbell/hegel/templates/deployment.yaml
+++ b/charts/tinkerbell/hegel/templates/deployment.yaml
@@ -32,6 +32,8 @@ spec:
           - {{ . }}
           {{- end }}
           env:
+            - name: TRUSTED_PROXIES
+              value: {{ .Values.hegel.trustedProxies }}
             {{- range $i, $env := .Values.hegel.env }}
             - name: {{ $env.name | quote }}
               value: {{ $env.value | quote }}
