--- a/charts/tinkerbell/hegel/values.yaml
+++ b/charts/tinkerbell/hegel/values.yaml
@@ -1,8 +1,6 @@
 hegel: # a top-level key like this enables importing of all sub-keys in parent charts
   deploy: true
-  env:
-  - name: TRUSTED_PROXIES
-    value: 192.168.0.0/16
+  trustedProxies: 192.168.0.0/16 # comma-separated list of trusted proxies
   name: hegel
   image: quay.io/tinkerbell/hegel:v0.7.0
   imagePullPolicy: IfNotPresent
