Run Boots in hostNetwork mode the default:
Using hostNetwork as the default means that a
dhcp relay agent is not required.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: e43fcc854f22779134789e7a074643a927dc4eb2

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -61,7 +61,7 @@ boots:
       value: "debug"
     - name: BOOTS_EXTRA_KERNEL_ARGS
       value: "tink_worker_image=quay.io/tinkerbell/tink-worker:sha-eeb2a454"
-    hostNetwork: false
+    hostNetwork: true
 
 # hegel chart overrides
 hegel:
