Update Rufio manifests:
Remove many unneeded manifests.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 0ae81340f97e3b912ce90702fc76da86d5365d82

--- a/charts/tinkerbell/rufio/templates/cluster-role.yaml
+++ b/charts/tinkerbell/rufio/templates/cluster-role.yaml
@@ -1,11 +1,19 @@
 ---
-{{- if .Values.rufio.deploy }}
+{{- if .Values.rufio.deploy }}---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   creationTimestamp: null
-  name: {{ .Values.rufio.managerRoleName }}
+  name: manager-role
 rules:
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - bmc.tinkerbell.org
   resources:
