--- a/charts/.github/workflows/ci.yaml
+++ b/charts/.github/workflows/ci.yaml
@@ -16,4 +16,4 @@ jobs:
           version: v3.9.4
 
       - name: Helm lint
-        run: helm lint tinkerbell/{boots,hegel,stack,tink}
+        run: helm dependency build tinkerbell/stack/ && helm lint tinkerbell/{boots,hegel,stack,tink}
