Update iPXE binary to latest. Apply vcreate patch:
The vcreate patch is needed for the vcreate command
to function properly. See ipxe/ipxe#369.
This is a work around until upstream addresses the issue properly.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: ipxedust
Tinkerbell-Legacy-Original-SHA1: 3557d370e4cb714dedd8244a2b230f44ab7e72f8

--- a/ipxedust/Makefile
+++ b/ipxedust/Makefile
@@ -2,6 +2,7 @@ OSFLAG := $(shell go env GOHOSTOS)
 BINARY := ipxe
 IPXE_BUILD_SCRIPT := binary/script/build_ipxe.sh
 IPXE_FETCH_SCRIPT := binary/script/fetch_and_extract_ipxe.sh
+IPXE_VCREATE_PATCH := binary/script/vcreate.patch
 IPXE_NIX_SHELL := binary/script/shell.nix
 
 help: ## show this help message
@@ -23,7 +24,7 @@ ipxe_build_in_docker := $(shell if [ $(OSFLAG) = "darwin" ]; then echo true; els
 .PHONY: extract-ipxe
 extract-ipxe: $(ipxe_readme) ## Fetch and extract ipxe source
 $(ipxe_readme): binary/script/ipxe.commit
-	${IPXE_FETCH_SCRIPT} "$(ipxe_sha_or_tag)"
+	${IPXE_FETCH_SCRIPT} "$(ipxe_sha_or_tag)" ${IPXE_VCREATE_PATCH}
 	touch "$@"
 
 binary/ipxe.efi: $(ipxe_readme) ## build ipxe.efi
