Update all service to release versions:
Clean up of service naming and labels.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 2fd3a72eccd135ecd53cc21bcf3d6cb146b8776e

--- a/charts/tinkerbell/rufio/values.yaml
+++ b/charts/tinkerbell/rufio/values.yaml
@@ -1,6 +1,6 @@
 rufio: # a top-level key like this enables importing of all sub-keys in parent charts
   deploy: true
-  name: rufio-controller-manager
+  name: rufio
   image: quay.io/tinkerbell/rufio:v0.1.0
   resources:
     limits:
