--- a/charts/tinkerbell/rufio/templates/deployment.yaml
+++ b/charts/tinkerbell/rufio/templates/deployment.yaml
@@ -3,12 +3,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
+    app: {{ .Values.rufio.name }}
     control-plane: controller-manager
   name: {{ .Values.rufio.name }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
   selector:
     matchLabels:
+      app: {{ .Values.rufio.name }}
       control-plane: controller-manager
       stack: tinkerbell
   replicas: 1
@@ -17,6 +19,7 @@ spec:
       annotations:
         kubectl.kubernetes.io/default-container: manager
       labels:
+        app: {{ .Values.rufio.name }}
         control-plane: controller-manager
         stack: tinkerbell
     spec:
