--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -36,6 +36,7 @@ kubevip:
 # boots chart overrides
 boots:
   boots:
+    image: quay.io/tinkerbell/boots:v0.8.0
     env:
     - name: DATA_MODEL_VERSION
       value: "kubernetes"
@@ -60,10 +61,23 @@ boots:
     - name: BOOTS_LOG_LEVEL
       value: "debug"
     - name: BOOTS_EXTRA_KERNEL_ARGS
-      value: "tink_worker_image=quay.io/tinkerbell/tink-worker:sha-eeb2a454"
+      value: "tink_worker_image=quay.io/tinkerbell/tink-worker:v0.8.0"
     hostNetwork: true
 
 # hegel chart overrides
 hegel:
   hegel:
-    image: quay.io/tinkerbell/hegel:latest
+    image: quay.io/tinkerbell/hegel:v0.7.0
+
+# rufio chart overrides
+rufio:
+  rufio:
+    image: quay.io/tinkerbell/rufio:v0.1.0
+
+# tink chart overrides
+tink:
+  tink:
+    controller:
+      image: quay.io/tinkerbell/tink-controller:v0.8.0
+    server:
+      image: quay.io/tinkerbell/tink:v0.8.0
