Update the stack readme:
This will help describe all values.yaml fields.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 8e23dec8b293d7122d03b1c17f0351427b5b4323

--- a/charts/tinkerbell/stack/templates/service.yaml
+++ b/charts/tinkerbell/stack/templates/service.yaml
@@ -13,7 +13,7 @@ spec:
   type: {{ .Values.stack.service.type }}
   {{- if eq .Values.stack.service.type "LoadBalancer" }}
   loadBalancerClass: {{ .Values.stack.lbClass }}
-  loadBalancerIP: {{ .Values.stack.ip }}
+  loadBalancerIP: {{ .Values.stack.loadBalancerIP }}
   {{- end }}
   externalTrafficPolicy: Local
   ports:
