--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -18,9 +18,9 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.17"
+          go-version: "1.19"
       - name: goimports
-        run: go get golang.org/x/tools/cmd/goimports && goimports -d . | (! grep .)
+        run: go install golang.org/x/tools/cmd/goimports@latest && goimports -d . | (! grep .)
       - name: go vet
         run: go vet ./...
       - name: lint
