Move sources and tidy func signatures
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 1ae930a863997ddec375626e93b4f23063b1e41e

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -9,8 +9,8 @@ build:
 	CGO_ENABLED=0 GOOS=$$GOOS go build -ldflags="-X build.gitRevision=$(shell git rev-parse --short HEAD)" -o hegel ./cmd/hegel
 
 .PHONY: unit-test
-unit-test:
-	go test $(GO_TEST_ARGS) -coverprofile=unit-test.coverage ./...
+test:
+	go test $(GO_TEST_ARGS) -coverprofile=coverage.out ./...
 
 IMAGE_ARGS ?= -t hegel
 
