--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -7,6 +7,10 @@ on:
       - "v*"
   pull_request:
 
+env:
+  REGISTRY: quay.io
+  IMAGE: quay.io/${{ github.repository }}
+
 jobs:
   validation:
     runs-on: ubuntu-latest
@@ -15,47 +19,62 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Install Go
         uses: actions/setup-go@v2
         with:
           go-version: "1.19"
-      - name: goimports
+
+      - name: Install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest && goimports -d . | (! grep .)
+
       - name: go vet
         run: go vet ./...
+
       - name: lint
         run: make lint
-      - name: go test coverage
-        run: go test -coverprofile=coverage.txt ./...
-      - name: upload codecov
-        run: bash <(curl -s https://codecov.io/bash)
-  docker-images:
+
+      - name: go test with coverage
+        run: |
+          go test -coverprofile=coverage.txt ./...
+          bash <(curl -s https://codecov.io/bash)
+
+  images:
     runs-on: ubuntu-latest
     needs: [validation]
     steps:
-      - name: Docker Image Tag for Sha
-        id: docker-image-tag
-        run: |
-          echo ::set-output name=tags::quay.io/tinkerbell/hegel:latest,quay.io/tinkerbell/hegel:sha-${GITHUB_SHA::8}
+      - name: Tags
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.IMAGE }}
+          tags: |
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Login to quay.io
         uses: docker/login-action@v1
         if: ${{ startsWith(github.ref, 'refs/heads/main') }}
         with:
-          registry: quay.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: quay.io/tinkerbell/hegel
+
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./cmd/hegel/Dockerfile
-          cache-from: type=registry,ref=quay.io/tinkerbell/hegel:latest
+          cache-from: type=registry,ref=${{ env.IMAGE }}:latest
           push: ${{ startsWith(github.ref, 'refs/heads/main') }}
-          tags: ${{ steps.docker-image-tag.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64
