Refacfor handlers with frontend's and backends
To create a cleaner separation between frontends and backends this
refactor looks to introduce a set of packages that have a clear scope
and purpose. In doing so we create far more testable code that is
clear in its intent and handling of data between layers.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 8037e8018a736686970502e2b3428b9d43d4379b

--- a/hegel/.golangci.yml
+++ b/hegel/.golangci.yml
@@ -31,6 +31,7 @@ linters-settings:
   errorlint:
     # these are still common in Go: for instance, exit errors.
     asserts: false
+    errorf: false
 
   exhaustive:
     default-signifies-exhaustive: true
