--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -1,11 +1,21 @@
+# Specify the target architecture to build the binary for. (Recipes: build, image)
 GOARCH ?= $(shell go env GOARCH)
+
+# Specify the target OS to build the binary for. (Recipes: build)
 GOOS ?= $(shell go env GOOS)
 
+# Specify additional `docker build` arguments. (Recipes: image)
+IMAGE_ARGS ?= -t hegel
+
+.PHONY: help
+help:  ## Display this help
+	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[%\/0-9A-Za-z_-]+:.*?##/ { printf "  \033[36m%-20s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
+
 # The image recipe calls build hence build doesn't feature here.
-all: unit-test image
+all: test image ## Run tests and build the Hegel a Linux Hegel image for the host architecture.
 
 .PHONY: build
-build:
+build: ## Build the Hegel binary. Use GOOS and GOARCH to set the target OS and architecture.
 	CGO_ENABLED=0 \
 	GOOS=$$GOOS \
 	GOARCH=$$GOARCH \
@@ -14,18 +24,25 @@ build:
 		-o hegel-$(GOOS)-$(GOARCH) \
 		./cmd/hegel
 
-.PHONY: unit-test
-test:
+.PHONY: test
+test: ## Run unit tests.
 	go test $(GO_TEST_ARGS) -coverprofile=coverage.out ./...
-
-IMAGE_ARGS ?= -t hegel
 
 # When we build the image its Linux based. This means we need a Linux binary hence we need to export
 # GOOS so we have compatible binary.
 .PHONY: image
 image: export GOOS=linux
-image: build
+image: build ## Build a Linux based Hegel image for the the host architecture.
 	docker build --build-arg GOPROXY=$(GOPROXY) $(IMAGE_ARGS) .
+
+# The command to run mockgen.
+MOCKGEN = go run github.com/golang/mock/mockgen@v1.6
+
+mocks: ## Generate mocks for testing.
+	$(MOCKGEN) \
+		-destination internal/frontend/ec2/frontend_mock_test.go \
+		-package ec2 \
+		-source internal/frontend/ec2/frontend.go
 
 # BEGIN: lint-install --dockerfile=warn .
 # http://github.com/tinkerbell/lint-install
