--- a/ipxedust/.github/settings.yml
+++ b/ipxedust/.github/settings.yml
@@ -7,6 +7,8 @@ collaborators:
   # Approvers
   - username: mmlb
     permission: push
+  - username: chrisdoherty4
+    permission: push
   # Reviewers
   - username: nshalman
     permission: triage
