--- a/hegel/.github/mergify.yml
+++ b/hegel/.github/mergify.yml
@@ -3,7 +3,7 @@ queue_rules:
     conditions:
       # Conditions to get out of the queue (= merged)
       - check-success=DCO
-      - check-success=docker-images
+      - check-success=images
       - check-success=validation
 
 pull_request_rules:
@@ -14,7 +14,7 @@ pull_request_rules:
       - "#changes-requested-reviews-by=0"
       - "#review-requested=0"
       - check-success=DCO
-      - check-success=docker-images
+      - check-success=images
       - check-success=validation
       - label!=do-not-merge
       - label=ready-to-merge
