Add e2e tests for the Hegel root command
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: a6f5353388c59cb4f42d6987983e3a59d52f339f

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -28,6 +28,10 @@ build: ## Build the Hegel binary. Use GOOS and GOARCH to set the target OS and a
 test: ## Run unit tests.
 	go test $(GO_TEST_ARGS) -coverprofile=coverage.out ./...
 
+.PHONY: test-e2e
+test-e2e:
+	go test $(GO_TEST_ARGS) -tags=e2e ./e2e
+
 # When we build the image its Linux based. This means we need a Linux binary hence we need to export
 # GOOS so we have compatible binary.
 .PHONY: image
