--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -30,7 +30,7 @@ test: ## Run unit tests.
 
 .PHONY: test-e2e
 test-e2e:
-	go test $(GO_TEST_ARGS) -tags=e2e ./e2e
+	go test $(GO_TEST_ARGS) -tags=e2e -coverprofile=coverage.out ./e2e
 
 # When we build the image its Linux based. This means we need a Linux binary hence we need to export
 # GOOS so we have compatible binary.
