Add Kubernetes unit tests
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: ce69acd77b4fb08d09e850b2509caf90e960471f

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -46,6 +46,10 @@ mocks: ## Generate mocks for testing.
 		-destination internal/frontend/ec2/frontend_mock_test.go \
 		-package ec2 \
 		-source internal/frontend/ec2/frontend.go
+	$(MOCKGEN) \
+		-destination internal/backend/kubernetes/backend_mock_test.go \
+		-package kubernetes \
+		-source internal/backend/kubernetes/backend.go
 
 # BEGIN: lint-install --dockerfile=warn .
 # http://github.com/tinkerbell/lint-install
