--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Login to quay.io
         uses: docker/login-action@v2
-        if: ${{ startsWith(github.ref, 'refs/heads/main') }}
+        if: ${{ startsWith(github.ref, 'refs/heads/main') || startsWith(github.ref_name, 'v') }}
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.QUAY_USERNAME }}
@@ -108,6 +108,6 @@ jobs:
         with:
           context: ./
           cache-from: type=registry,ref=${{ env.IMAGE }}:latest
-          push: ${{ startsWith(github.ref, 'refs/heads/main') }}
+          push: ${{ startsWith(github.ref, 'refs/heads/main') || startsWith(github.ref_name, 'v') }}
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64
