--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -8,8 +8,8 @@ GOOS ?= $(shell go env GOOS)
 IMAGE_ARGS ?= -t hegel
 
 .PHONY: help
-help:  ## Display this help
-	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[%\/0-9A-Za-z_-]+:.*?##/ { printf "  \033[36m%-20s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
+help:
+	@awk 'BEGIN {FS = ":.*##"; printf "Usage:\n  make \033[36m<target>\033[0m\n"} /^[%\/0-9A-Za-z_-]+:.*?##/ { printf "  \033[36m%-20s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
 
 # The image recipe calls build hence build doesn't feature here.
 all: test image ## Run tests and build the Hegel a Linux Hegel image for the host architecture.
@@ -28,7 +28,7 @@ test: ## Run unit tests.
 	go test $(GO_TEST_ARGS) -coverprofile=coverage.out ./...
 
 .PHONY: test-e2e
-test-e2e:
+test-e2e: ## Run E2E tests.
 	go test $(GO_TEST_ARGS) -tags=e2e -coverprofile=coverage.out ./e2e
 
 # When we build the image its Linux based. This means we need a Linux binary hence we need to export
