--- a/hegel/.github/dependabot.yml
+++ b/hegel/.github/dependabot.yml
@@ -12,6 +12,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "sunday"
       time: "05:00"
       timezone: "America/New_York"
 
@@ -19,5 +20,6 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "sunday"
       time: "05:00"
       timezone: "America/New_York"
