--- a/hegel/.github/dependabot.yml
+++ b/hegel/.github/dependabot.yml
@@ -15,6 +15,7 @@ updates:
       day: "sunday"
       time: "05:00"
       timezone: "America/New_York"
+    open-pull-requests-limit: 10
 
   - package-ecosystem: "docker"
     directory: "/"
