Move e2e tests to `internal`
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: cd1c495348ed4a8f0bb6d71e0c89c66b6f218da3

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -29,7 +29,7 @@ test: ## Run unit tests.
 
 .PHONY: test-e2e
 test-e2e: ## Run E2E tests.
-	go test $(GO_TEST_ARGS) -tags=e2e -coverprofile=coverage.out ./e2e
+	go test $(GO_TEST_ARGS) -tags=e2e -coverprofile=coverage.out ./internal/e2e
 
 # When we build the image its Linux based. This means we need a Linux binary hence we need to export
 # GOOS so we have compatible binary.
