Correct makefile target for e2e
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 42a56f557285197d823bf6074b1b082ad516cf23

--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -83,7 +83,7 @@ jobs:
           cache: true
 
       - name: Run end-to-end tests
-        run: make e2e
+        run: make test-e2e
 
       - name: Upload coverage report (codcov.io)
         run: bash <(curl -s https://codecov.io/bash)
