Conslidate CI linting with Makefile lint target
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 8ecfa5d0cec3f1cb87d90328412c2a0a34ebea7d

--- a/hegel/Makefile
+++ b/hegel/Makefile
@@ -62,6 +62,9 @@ LINT_DIR 	?= $(OUT_DIR)/linters
 GOLANGCI_LINT_VERSION 	?= v1.50.1
 GOLANGCI_LINT 			:= go run github.com/golangci/golangci-lint/cmd/golangci-lint@$(GOLANGCI_LINT_VERSION)
 
+GOIMPORTS_VERSION 	?= v0.3.0
+GOIMPORTS 			:= go run golang.org/x/tools/cmd/goimports@$(GOIMPORTS_VERSION)
+
 HADOLINT_VERSION 	?= v2.12.0
 HADOLINT_TARGET 	:= install/hadolint-$(HADOLINT_VERSION)
 HADOLINT 			:= $(LINT_DIR)/hadolint-$(HADOLINT_VERSION)
@@ -81,6 +84,8 @@ lint: SHELL := bash
 lint: $(shell mkdir -p $(LINT_DIR))
 lint: $(HADOLINT_TARGET) $(YAMLLINT_TARGET) ## Run linters.
 	$(GOLANGCI_LINT) run
+	$(GOIMPORTS) -d -e . | (! grep .)
+	go vet ./...
 	$(HADOLINT) --no-fail $(shell find . -name "*Dockerfile")
 	$(YAMLLINT) .
 
