Add timeout for github lint actions
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 9e2062562e0517e5a2e2f689e25fc992d602f558

--- a/hegel/.golangci.yml
+++ b/hegel/.golangci.yml
@@ -114,9 +114,6 @@ linters-settings:
   unused:
     go: "1.19"
 
-output:
-  sort-results: true
-
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
@@ -147,3 +144,10 @@ issues:
   # Don't hide lint issues just because there are many of them
   max-same-issues: 0
   max-issues-per-linter: 0
+
+output:
+  sort-results: true
+
+run:
+  # Default is 1m and github actions often times out.
+  timeout: 5m
