--- a/hegel/.github/workflows/ci.yaml
+++ b/hegel/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
           go-version: "${{ env.GO_VERSION }}"
           cache: true
 
-      - name: Run end-to-end tests
+      - name: Run integration tests
         run: make test-integration
 
       - name: Upload coverage report (codcov.io)
