--- a/charts/tinkerbell/hegel/values.yaml
+++ b/charts/tinkerbell/hegel/values.yaml
@@ -1,8 +1,8 @@
 hegel: # a top-level key like this enables importing of all sub-keys in parent charts
   deploy: true
-  trustedProxies: 192.168.0.0/16 # comma-separated list of trusted proxies
+  trustedProxies: "" # comma-separated list of trusted proxies
   name: hegel
-  image: quay.io/tinkerbell/hegel:v0.8.0
+  image: quay.io/tinkerbell/hegel:v0.10.1
   imagePullPolicy: IfNotPresent
   replicas: 1
   service:
@@ -19,4 +19,3 @@ hegel: # a top-level key like this enables importing of all sub-keys in parent c
       memory: 64Mi
   roleName: hegel-role
   roleBindingName: hegel-rolebinding
-  
