Make stack and kubevip deployents optional
* The service and full nginx deployment is now gated behind the
  stack.enabled flag.
* KubeVIP configuration is now gated on both stack enabled and kubevip
  explicitly enabled.
* KubeVIP values are now defined under the `stack` key in the value
  syaml

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: dd603baccb47c3933f64a5df0ee4ee10ac36b6b7

--- a/charts/tinkerbell/boots/templates/deployment.yaml
+++ b/charts/tinkerbell/boots/templates/deployment.yaml
@@ -34,8 +34,10 @@ spec:
           {{- end }}
           {{- end }}
           env:
+            {{ with .Values.boots.trustedProxies }}
             - name: TRUSTED_PROXIES
-              value: {{ .Values.boots.trustedProxies }}
+              value: {{ . | quote }}
+            {{- end }}
           {{- if .Values.boots.env }}
             {{- range $i, $env := .Values.boots.env }}
             - name: {{ $env.name | quote }}
