--- a/charts/tinkerbell/stack/templates/nginx-configmap.yaml
+++ b/charts/tinkerbell/stack/templates/nginx-configmap.yaml
@@ -1,3 +1,6 @@
+# The NGINX ConfigMap is in a separate file because its checksum is used to trigger updates in
+# the deployment.
+{{ if .Values.stack.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -86,3 +89,4 @@ data:
           access_log /dev/stdout logger-json;
       }
     }
+{{- end }}
