--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.stack.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,7 +14,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/nginx-configmap.yaml") . | sha256sum }}
       labels:
         {{- with .Values.stack.selector }}
         {{- toYaml . | nindent 8 }}
@@ -91,3 +92,48 @@ spec:
           items:
             - key: nginx.conf
               path: nginx.conf.template
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    "helm.sh/hook": "post-install,post-delete,post-rollback,post-upgrade"
+    "helm.sh/hook-weight": "5"
+  labels:
+    app: {{ .Values.stack.name }}
+  name: {{ .Values.stack.name }}
+  namespace: {{ .Release.Namespace | quote }}
+spec:
+  type: {{ .Values.stack.service.type }}
+  {{- if eq .Values.stack.service.type "LoadBalancer" }}
+  loadBalancerClass: {{ .Values.stack.lbClass }}
+  loadBalancerIP: {{ .Values.stack.loadBalancerIP }}
+  {{- end }}
+  externalTrafficPolicy: Local
+  ports:
+  - name: {{ .Values.hegel.name }}
+    port: {{ .Values.hegel.deployment.port }}
+    protocol: TCP
+    targetPort: {{ .Values.hegel.deployment.portName }}
+  - name: {{ .Values.tink.server.name }}
+    port: {{ .Values.tink.server.deployment.port }}
+    protocol: TCP
+    targetPort: {{ .Values.tink.server.deployment.portName }}
+  - name: {{ .Values.stack.hook.name }}
+    port: {{ .Values.stack.hook.port }}
+    protocol: TCP
+    targetPort: hook-http
+  {{- if not .Values.boots.hostNetwork }}
+  {{- range .Values.boots.ports }}
+  - name: {{ .name }}
+    port: {{ .port }}
+    targetPort: {{ .targetPort }}
+    protocol: {{ .protocol }}
+  {{- end }}
+  {{- end }}
+  selector:
+    app: stack
+    {{- with .Values.stack.selector }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+{{- end -}}
