Add chrisdoherty4 as maintainer
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: ipxedust
Tinkerbell-Legacy-Original-SHA1: 291548090790c9359fb1812bf9c4e61baee4315a

--- a/ipxedust/.github/settings.yml
+++ b/ipxedust/.github/settings.yml
@@ -4,10 +4,10 @@ collaborators:
   # Maintainers, should also be added to the .github/CODEOWNERS file as owners of this settings.yml file.
   - username: jacobweinstock
     permission: maintain
+  - username: chrisdoherty4
+    permission: maintain
   # Approvers
   - username: mmlb
-    permission: push
-  - username: chrisdoherty4
     permission: push
   # Reviewers
   - username: nshalman
