Add pull policy for Rufio and remove obsolete values
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: b1db5f4bb6f755e17884e159b36b2fd777e16add

--- a/charts/tinkerbell/rufio/templates/deployment.yaml
+++ b/charts/tinkerbell/rufio/templates/deployment.yaml
@@ -26,12 +26,13 @@ spec:
       securityContext:
         runAsNonRoot: true
       containers:
-      - command:
+      - name: manager
+        image: {{ .Values.image }}
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
+        command:
         - /manager
         args:
         - --leader-elect
-        image: {{ .Values.image }}
-        name: manager
         securityContext:
           allowPrivilegeEscalation: false
         livenessProbe:
@@ -46,8 +47,6 @@ spec:
             port: 8081
           initialDelaySeconds: 5
           periodSeconds: 10
-        # TODO(user): Configure the resources accordingly based on the project requirements.
-        # More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
         resources:
           limits:
             cpu: {{ .Values.resources.limits.cpu }}
