--- a/charts/tinkerbell/rufio/values.yaml
+++ b/charts/tinkerbell/rufio/values.yaml
@@ -1,18 +1,16 @@
 deploy: true
 name: rufio
 image: quay.io/tinkerbell/rufio:v0.2.1
+imagePullPolicy: IfNotPresent
 resources:
-  limits:
-    cpu: 500m
-    memory: 128Mi
   requests:
     cpu: 10m
     memory: 64Mi
+  limits:
+    cpu: 500m
+    memory: 128Mi
 serviceAccountName: rufio-controller-manager
 rufioLeaderElectionRoleName: rufio-leader-election-role
-rufioSecretsViewerRoleName: rufio-secrets-viewer-role
 managerRoleName: rufio-manager-role
 rufioLeaderElectionRoleBindingName: rufio-leader-election-rolebinding
-rufioSecretsViewerRoleBindingName: rufio-secrets-viewer-rolebinding
 managerRoleBindingName: rufio-manager-rolebinding
-managerConfigmapName: rufio-manager-config
