Update the readme for changes in the Boots value.yaml:
This keeps the readme up to date.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 7e71eb7e7989568654fefa7cd5563a6b73d0c5b2

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -45,6 +45,8 @@ boots:
   trustedProxies: []
   # In most cases this value will be the same as `stack.loadBalancerIP`.
   remoteIp: 192.168.2.111
+  # hostNetwork: true is already the default in the Boots chart, but is included here for clarity.
+  hostNetwork: true
 
 hegel:
   image: quay.io/tinkerbell/hegel:v0.10.1
