Update roles based on governance:
https://github.com/tinkerbell/org/blob/main/GOVERNANCE.md
Updating roles based on contributions over the last 8 months.
See the tinkerbell/org repo and the devstats.sh script to see
the data.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 533027757433087f7d7061ba20d14a323bd811b5

--- a/hegel/.github/CODEOWNERS
+++ b/hegel/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-/.github/settings.yml @chrisdoherty4 @mmlb @nshalman
-/.github/CODEOWNERS @chrisdoherty4 @mmlb @nshalman
+/.github/settings.yml @chrisdoherty4 @jacobweinstock
+/.github/CODEOWNERS @chrisdoherty4 @jacobweinstock
